# SmartShopper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  claude-code-decision-guide.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/agents/: sales_agent.py
src/monitoring/: discord_logger.py
src/telegram/: bot.py  formatters.py  keyboards.py  webhook.py
src/telegram/handlers/: callbacks.py  search.py  start.py
src/telegram/middleware/: rate_limit.py  user_lock.py
