[project]
name = "smartshopper"
version = "0.1.0"
description = "AI-powered product comparison & logistics system for Israel"
requires-python = ">=3.11"

dependencies = [
    # Core
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",

    # Agent System (langgraph-supervisor-py patterns)
    "langgraph>=1.0.2",
    "langchain-core>=1.0.0",
    "langgraph-supervisor>=0.0.31",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",

    # Telegram (tg-bot-fastapi-aiogram pattern)
    "aiogram>=3.14",

    # Scraping
    "scrapy>=2.12",
    "scrapy-playwright>=0.0.41",
    "playwright>=1.49",
    "fake-useragent>=2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",

    # Cache
    "redis[hiredis]>=5.2",

    # APIs
    "googlemaps>=4.10",

    # Scheduling & Monitoring
    "apscheduler>=3.10",
    "prometheus-client>=0.21",
    "structlog>=24.4",

    # Email
    "sendgrid>=6.11",

    # Utilities
    "pytz>=2024.2",
    "python-dotenv>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
